[package]
name = "bevy_fallible"
version = "0.4.0"
edition = "2018"
authors = ["barsoosayque <shtoshich@gmail.com>"]
description = "A simple plugin to add fallible systems to Bevy game engine"
repository = "https://github.com/barsoosayque/bevy_fallible"
license = "MIT"
keywords = ["game", "engine", "bevy"]
categories = ["game-engines"]
readme = "README.md"

[dependencies]
bevy_fallible_derive = { path = "bevy_fallible_derive/", version = "0.4.0" }
bevy_app = "0.13"
bevy_ecs = "0.13"

[dev-dependencies]
anyhow = "1.0.80"

[workspace]
members = ['bevy_fallible_derive']
