[package]
name = "bevy_fallable_derive"
version = "0.3.1"
edition = "2018"
authors = ["barsoosayque <shtoshich@gmail.com>"]
description = "Proc macro crate for bevy_fallable"
repository = "https://github.com/barsoosayque/bevy_fallable"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
syn = { version = "1.0.51", features = ['full', 'fold', 'visit', 'extra-traits'] }
quote = "1.0.7"
