[package]
name = "bevy_fallible_derive"
version = "0.4.0"
edition = "2018"
authors = ["barsoosayque <shtoshich@gmail.com>"]
description = "Proc macro crate for bevy_fallible"
repository = "https://github.com/barsoosayque/bevy_fallible"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
syn = { version = "1.0.51", features = ['full', 'fold', 'visit', 'extra-traits'] }
quote = "1.0.7"
